--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,11 @@
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DYHB">
-        <!--机具领用-->
+        <!--机具兑换-->
+        <activity
+            android:name=".mvp.machine.view.ExchangeActivity"
+            android:screenOrientation="portrait" />
+        <!-- 机具领用 -->
         <activity
             android:name=".mvp.machine.view.BuyMachineActivity"
             android:screenOrientation="portrait" />
