--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ dependencies {
 
     //地址选择器
     implementation 'com.github.gzu-liyujiang.AndroidPicker:AddressPicker:4.0.1'
+    //二维码
+    implementation 'com.github.bingoogolapple.BGAQRCode-Android:zxing:1.3.8'
+    //动态权限
+    implementation 'com.github.tbruyelle:rxpermissions:0.11'
 
 //    implementation 'cn.jiguang.sdk:jpush:3.1.5'  // 此处以JPush 3.1.5 版本为例。
 //    implementation 'cn.jiguang.sdk:jcore:1.2.3'  // 此处以JCore 1.2.3 版本为例。
